# src/Opdex.Auth.Api/Models/GrantType.cs
@@ -1,0 +1,6 @@
+namespace Opdex.Auth.Api.Models;
+
+public enum GrantType
+{
+    Code = 1, RefreshToken = 2
+}
