# src/Opdex.Auth.Api/Models/TokenRequestBody.cs
@@ -2,8 +2,12 @@ using System;
 
 namespace Opdex.Auth.Api.Models;
 
-public class AccessTokenRequestBody
+public class TokenRequestBody
 {
+    public GrantType GrantType { get; set; }
+    
+    public string RefreshToken { get; set; }
+    
     public Guid Code { get; set; }
 
     public string CodeVerifier { get; set; }
