# src/Opdex.Auth.Domain/Requests/SelectAuthSuccessByRefreshTokenQuery.cs
@@ -1,0 +1,5 @@
+using MediatR;
+
+namespace Opdex.Auth.Domain.Requests;
+
+public record SelectAuthSuccessByRefreshTokenQuery(string RefreshToken) : IRequest<AuthSuccess?>;
